fix Tags even though im gonna redo this now